--- a/src/android/app/src/main/res/menu/menu_overlay_options.xml
+++ b/src/android/app/src/main/res/menu/menu_overlay_options.xml
@@ -7,8 +7,8 @@
         android:checkable="true" />
 
     <item
-        android:id="@+id/menu_show_fps"
-        android:title="@string/emulation_show_fps"
+        android:id="@+id/menu_show_perf_overlay"
+        android:title="@string/emulation_show_perf_overlay"
         android:checkable="true" />
 
     <item
