Add option to have a semi transparent background for the ovelay
Should help peopel who have are using central positioning of the overlay and single screen layouts

--- a/src/android/app/src/main/res/values-night/lime_colors.xml
+++ b/src/android/app/src/main/res/values-night/lime_colors.xml
@@ -227,6 +227,7 @@
     <color name="lime_surfaceTint_gray">#B7B7B7</color>
 
     <!-- Common Colors Across All Themes -->
+    <color name="lime_transparent_black_50">#80000000</color>
     <color name="lime_outlineVariant">#C6C5D0</color>
     <color name="lime_error">#FFB4AB</color>
     <color name="lime_errorContainer">#93000A</color>
