Add "Open Application" to the about game dialog

--- a/src/android/app/src/main/res/menu/game_context_menu.xml
+++ b/src/android/app/src/main/res/menu/game_context_menu.xml
@@ -6,4 +6,8 @@
      <item
         android:id="@+id/game_context_open_save_dir"
         android:title="@string/game_context_open_save_dir" />
+    <item
+        android:id="@+id/game_context_open_app"
+        android:title="@string/game_context_open_app" />
+
 </menu>
