Add "Open Mods / Textures Folder" to about game dialog

--- a/src/android/app/src/main/res/menu/game_context_menu.xml
+++ b/src/android/app/src/main/res/menu/game_context_menu.xml
@@ -9,5 +9,11 @@
     <item
         android:id="@+id/game_context_open_app"
         android:title="@string/game_context_open_app" />
+    <item
+        android:id="@+id/game_context_open_textures"
+        android:title="@string/game_context_open_textures" />
+    <item
+        android:id="@+id/game_context_open_mods"
+        android:title="@string/game_context_open_mods" />
 
 </menu>
