Add "Open Extra Folder" option to about game dialog

--- a/src/android/app/src/main/res/menu/game_context_menu.xml
+++ b/src/android/app/src/main/res/menu/game_context_menu.xml
@@ -27,6 +27,9 @@
     <item
         android:id="@+id/game_context_uninstall_updates"
         android:title="@string/game_context_uninstall_updates" />
+    <item
+        android:id="@+id/game_context_open_extra"
+        android:title="@string/game_context_open_extra" />
 
 
 </menu>
