--- a/src/android/app/src/main/res/layout/dialog_about_game.xml
+++ b/src/android/app/src/main/res/layout/dialog_about_game.xml
@@ -149,14 +149,23 @@
                 android:text="@string/cheats" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/menu_button"
+                android:id="@+id/menu_button_open"
                 style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:contentDescription="@string/menu"
-                app:icon="@drawable/ic_more_vert"
+                app:icon="@drawable/ic_open"
                 app:iconGravity="textStart" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/menu_button_uninstall"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                android:layout_width="48dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                app:icon="@drawable/ic_uninstall"
+                app:iconGravity="textStart" />
+
 
         </LinearLayout>
 
