1 - Add favorites button to the game cardand faovrites tag to the game

--- a/src/android/app/src/main/res/layout/dialog_about_game.xml
+++ b/src/android/app/src/main/res/layout/dialog_about_game.xml
@@ -120,6 +120,16 @@
                 app:icon="@drawable/ic_shortcut"
                 app:iconGravity="textStart" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/favorite_game"
+                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
+                android:layout_width="48dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:contentDescription="@string/favorite"
+                app:icon="@drawable/ic_arrow_forward"
+                app:iconGravity="textStart" />
+
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
