--- a/src/android/app/src/main/res/layout/fragment_games.xml
+++ b/src/android/app/src/main/res/layout/fragment_games.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,35 +6,37 @@
     android:layout_height="match_parent"
     android:background="?attr/colorSurface">
 
-    <!-- Search Bar -->
     <FrameLayout
         android:id="@+id/frame_search"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="6dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/filter_button"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/search_background"
             style="?attr/materialCardViewFilledStyle"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            app:cardCornerRadius="28dp">
+            android:layout_height="42dp"
+            app:cardCornerRadius="21dp">
 
             <LinearLayout
                 android:id="@+id/search_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="56dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="42dp"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
+                    android:layout_width="21dp"
+                    android:layout_height="21dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginEnd="24dp"
+                    android:layout_marginEnd="18dp"
                     android:src="@drawable/ic_search"
                     app:tint="?attr/colorOnSurfaceVariant" />
 
@@ -45,18 +46,18 @@
                     android:layout_height="match_parent"
                     android:background="@android:color/transparent"
                     android:hint="@string/home_search_games"
-                    android:imeOptions="flagNoFullscreen"
                     android:inputType="text"
-                    android:maxLines="1" />
+                    android:maxLines="1"
+                    android:imeOptions="flagNoFullscreen" />
 
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/clear_button"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
                 android:layout_gravity="center_vertical|end"
-                android:layout_marginEnd="24dp"
+                android:layout_marginEnd="18dp"
                 android:background="?attr/selectableItemBackground"
                 android:src="@drawable/ic_clear"
                 android:visibility="invisible"
@@ -66,64 +67,32 @@
 
     </FrameLayout>
 
-    <!-- Chips -->
-<HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fadingEdge="horizontal"
-        android:scrollbars="none"
-        android:layout_marginVertical="4dp"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/filter_button"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="21dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/frame_search">
+        app:layout_constraintBottom_toBottomOf="@id/frame_search">
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/chip_group"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:paddingVertical="4dp"
-            app:chipSpacingHorizontal="12dp"
-            app:singleLine="true"
-            app:singleSelection="true">
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_filter"
+            app:tint="?attr/colorOnSurfaceVariant" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_recently_played"
-                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/search_recently_played"
-                app:chipCornerRadius="28dp" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_recently_added"
-                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/search_recently_added"
-                app:chipCornerRadius="28dp" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip_installed"
-                style="@style/Widget.Material3.Chip.Suggestion.Elevated"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="false"
-                android:text="@string/search_installed"
-                app:chipCornerRadius="28dp" />
-
-        </com.google.android.material.chip.ChipGroup>
-
-    </HorizontalScrollView>
+    </com.google.android.material.card.MaterialCardView>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@id/frame_search"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <RelativeLayout
