--- a/src/android/app/src/main/res/layout/fragment_games.xml
+++ b/src/android/app/src/main/res/layout/fragment_games.xml
@@ -95,7 +95,7 @@
         android:layout_marginTop="9dp"
         android:layout_marginEnd="15dp"
         app:cardCornerRadius="21dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/settings_button"
         app:layout_constraintBottom_toBottomOf="@id/frame_search">
 
         <ImageView
@@ -103,6 +103,26 @@
             android:layout_height="18dp"
             android:layout_gravity="center"
             android:src="@drawable/ic_filter"
+            app:tint="?attr/colorOnSurfaceVariant" />
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/settings_button"
+        style="?attr/materialCardViewFilledStyle"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="15dp"
+        app:cardCornerRadius="21dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/frame_search">
+
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_more"
             app:tint="?attr/colorOnSurfaceVariant" />
 
     </com.google.android.material.card.MaterialCardView>
